feat(commerce-node): add storefront working currency resolver
